# rCore-Tutorial-v3

./: README.md
bootloader/: rustsbi-k210.bin.bak
dependencies/easy-fs/src/: block_dev.rs
dependencies/fatfs/: Cargo.toml
dependencies/fatfs/src/: dir_entry.rs  file.rs  fs.rs  lib.rs  sdcard.rs  table.rs  time.rs
dependencies/k210-soc/: Cargo.toml
dependencies/k210-soc/src/: dmac.rs  fpioa.rs  gpio.rs  gpiohs.rs  lib.rs  plic.rs  spi.rs  sysctl.rs  uarths.rs  utils.rs
os/: Cargo.toml  Makefile  os.s  目前问题
os/src/: banner  config.rs  console.rs  entry.asm  lang_items.rs  linker-d1.ld  main.rs  sbi.rs  timer.rs  usertests
os/src/drivers/: mod.rs
os/src/drivers/block/: mod.rs  sdcard.rs  sdcard_d1.rs  virtio_blk.rs
os/src/drivers/plic/: mod.rs
os/src/drivers/uart/: mod.rs
os/src/fatfs/: boot_sector.rs  dir.rs  dir_entry.rs  file.rs  fs.rs  io.rs  lfn.rs  mod.rs  sdcard.rs  table.rs  time.rs
os/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
os/src/irq/: mod.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: mod.rs  mutex.rs  semaphore.rs  spin.rs  up.rs
os/src/syscall/: fs.rs  mod.rs  osinfo.rs  process.rs  sync.rs  thread.rs
os/src/task/: context.rs  id.rs  manager.rs  mod.rs  process.rs  processor.rs  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
